[package]
name = "pingu"
version = "0.1.2"
edition = "2021"
description = "A lightweight Rust library for monitoring website uptime and status"
license = "MIT"

[dependencies]
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

